--- a/tsgarza.com/css/style.css
+++ b/tsgarza.com/css/style.css
@@ -1,6 +1,7 @@
 header{
 	width: 100%;
-	height: 164px;
+	height: 1045px;
+	position: relative;
 }
 .topHeader{
 	background: #008bc7;
@@ -15,9 +16,16 @@ header{
 	padding: 12px;
 	margin-right: 200px;
 }
-.bottomHeader{
+/*.bottomHeader{
 	background: #20222e;
 	height: 116px;
+}*/
+.bottomHeader{
+	width: 100%;
+	overflow: hidden;
+	background: rgba(33,34,47, 0.90);
+	position: relative;
+	z-index: 1;
 }
 .logo{
 	height: 100%;
@@ -40,4 +48,56 @@ nav a:hover{
 	color: #fff;
 	background: #20222e;
 	border-bottom: 6px solid #edaa3d; 
+}
+#slider{
+	width: 100%;
+	height: 997px;
+	background: url(../img/slide1.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
+	position: absolute;
+	top: 48px;
+}
+#contenedorNosotros{
+	width: 100%;
+	height: 833px;
+	background: url(../img/fondo_nosotros.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+h2{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300;
+	color: #fefefe;
+	font-size: 48px;
+	margin-bottom: 0px;
+}
+h1{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 900;
+	color: #0050a2;
+	font-size: 60px;
+	margin-bottom: 0px;
+}
+h3{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 500;
+	color: #ffffff;
+	font-size: 48px;
+	margin-bottom: 50px;
+}
+.col-sm-9 p{
+	font-family: 'Montserrat', sans-serif;
+	color: #ffffff;
+	font-size: 16px;
+}
+.container{
+	padding-top: 163px;
+}
+#topHeaderServicios{
+	width: 100%;
+	height: 248px;
+	background: url(../img/fondoazul_servicios2.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
 }
