--- a/tsgarza.com/css/style.css
+++ b/tsgarza.com/css/style.css
@@ -235,12 +235,39 @@ header{
 	padding: 24px 84px;
 	margin-top: 37px;
 }
-#topContacto{
+#sucursales{
 	width: 100%;
 	height: 275px;
-	background: url(../img/fondo_topcontactanos.jpg) no-repeat;
+	background: url(../img/fondo_sucursales.jpg) no-repeat;
 	background-size: cover;
 	background-position: center;
+	padding: 50px 0 50px 0;
+}
+#containerSucursales{
+	max-width: 1056px;
+	border-style: solid;
+	border-width: thin 0px thin 0px;
+	border-color: #f9dfb7;
+}
+#sucursales .flex{
+	height: 158px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	flex-direction: column;
+}
+#sucursales h3{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	color: #fcefde;
+	font-size: 16px;
+}
+#sucursales h4{
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 100;
+	color: #ffffff;
+	font-size: 16px;
 }
 #contacto h3{
 	font-family: 'Montserrat', sans-serif;
@@ -336,14 +363,16 @@ header{
 #serviciosFooter ul{
 	padding: 0px;
 }
-#bottomFooter h4{
+#bottomFooter{
 	width: 100%;
 	height: 70px;
 	background-color: #2c4150;
+	padding-top: 20px;
+}
+#bottomFooter h4{
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 100;
 	color: #edaa3d;
 	font-size: 16px;
 	text-align: center;
-	padding-top: 20px;
 }
